fix: insufficient contrast ratio on the title of the contact section

--- a/style.css
+++ b/style.css
@@ -696,6 +696,12 @@ p {
     font-weight: 700;
 }
 
+.contact-title {
+    color: #FFFFFF;
+    text-shadow: 1px 1px #000;
+    position: relative;
+}
+
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
